// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint disabled 1`] = `
<div
  className="breakpoint disabled"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="1-label"
    checked={false}
    className="breakpoint-checkbox"
    id={1}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="1-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53:73
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at a different 1`] = `
<div
  className="breakpoint"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="1-label"
    checked={true}
    className="breakpoint-checkbox"
    id={1}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="1-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53:73
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at a generatedLocation 1`] = `
<div
  className="breakpoint paused"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="1-label"
    checked={true}
    className="breakpoint-checkbox"
    id={1}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="1-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53:73
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at an original location 1`] = `
<div
  className="breakpoint paused"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="1-label"
    checked={true}
    className="breakpoint-checkbox"
    id={1}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="1-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      5:7
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint simple 1`] = `
<div
  className="breakpoint"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="1-label"
    checked={true}
    className="breakpoint-checkbox"
    id={1}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="1-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53:73
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;
